--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -48,7 +48,9 @@
                         
 
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
+                        <div class="col-12">
+                         <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié?</a>
+                    </div>
                         <div class="checkbox mb-3">
                             <label>
                                 <input type="checkbox" name="_remember_me"> Remember me
@@ -59,8 +61,9 @@
                             Sign in
                         </button>
                         <div class="col-12">
-                        <p class="small mb-0">Vous n'aves pas un compte? <a href="{{path('app_register')}}">Créer un compte</a></p>
+                        <p class="small mb-0">Vous n'avais pas un compte? <a href="{{path('app_register')}}">Créer un compte</a></p>
                     </div>
+                    
                     </div>
                 </div>
             </div>
