--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -2,7 +2,9 @@
 
 <p>Pour réinitialiser votre mot de passe, veuillez cliquer sur le lien suivant :</p>
 
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+<a href="http://127.0.0.1:8000/reset-password/reset/{{ resetToken.token }}">
+    Réinitialiser mon mot de passe
+</a>
 
 <p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
 
