--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -26,8 +26,9 @@
                 Entrez votre adresse e-mail, et nous vous enverrons un lien pour réinitialiser votre mot de passe.
             </small>
         </div>
-
         <button class="btn btn-primary">Envoyer l'e-mail de réinitialisation</button>
     {{ form_end(requestForm) }}
+    <div class="mt-4"></div>
+    </div>
 {% endblock %}
 
